<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="str_chargement">Chargement ...</string>

    <string name="app_name">Employee</string>
    <string name="app_desc">Employee</string>
    <string name="app_chargement">Chargement...</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email </string>
    <string name="passowrd">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below :</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="type_user">Role d utilisateur</string>
    <string name="seeNotification">Show custom notification</string>

    <!--                 Menu bar strings :         -->

    <string name="environement_url" tools:ignore="ExtraTranslation">http://f14-encadrement-stagaires.wbc-prod.com/</string>

    <string name="permission_text01">Pour commencer, l\'application\na besoin de certaines autorisations.</string>
    <string name="permission_text02">Afin de profiter pleinement de toutes les fonctionnalités, l\'application doit accéder aux images qu\'elle télécharge.</string>
    <string name="permission_suivant">Suivant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity_connexion_tv1">Email</string>
    <string name="activity_connexion_tv2">Mot de passe </string>
    <string name="activity_connexion_tv4">Vous devez renseigner votre adresse email </string>
    <string name="activity_connexion_tv5">Vous devez renseigner votre mot de passe </string>
    <string name="activity_connexion_tv7">Compte introuvable</string>
    <string name="activity_connexion_tv8">Problème d\'identification</string>
    <string name="activity_connexion_tv9">Veuillez vérifier votre connexion internet et réessayer.</string>
    <string name="activity_connexion_tv10">Username/Password incorrect</string>
    <string name="activity_connexion_tv11">Connexion</string>
    <string name="activity_connexion_tv12">Votre adresse email n\'est pas valide ! </string>

    <string name="message_identification_ko">Problème d\'identification</string>
    <string name="message_internet_off">Problème de connexion internet, veuillez vérifier vos paramètres.</string>
    <string name="popup_titre">Connexion internet</string>
    <string name="popup_button_OK">Ok</string>
    <string name="popup_text_exit_application">Quitter l\'application ?</string>
    <string name="popup_button_oui">Oui</string>
    <string name="popup_button_deconnexion">Souhaitez-vous vous déconnecter de votre compte Ma Franchise Caissier?</string>
    <string name="popup_button_se_deconnecter">Déconnexion</string>
    <string name="popup_button_annuler">Annuler</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home </string>
    <string name="settings_fragment">Settings </string>
    <string name="movie_fragment">Movie </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">fragment : </string>

    <string name="str_message">Message </string>
    <string name="str_chat">Chat </string>
    <string name="str_profile">Profile </string>
    <string name="str_send">Send </string>
    <string name="str_share">Share </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_username">Username</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

</resources>
