<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc_transp_99"
    android:fitsSystemWindows="true"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView android:id="@+id/biglogo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_main_app"
                android:adjustViewBounds="true"
                />

        </FrameLayout>

        <TextView android:id="@+id/text01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/permission_text01"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"

            />

        <TextView android:id="@+id/text02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/permission_text02"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/permission_suivant"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@drawable/customborder"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>