<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:weightSum="10"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_arrow_back"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_fingerprint"
                android:layout_marginLeft="160dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/customborder"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center"

                >

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/customborder"
                android:layout_margin="20dp"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_user"
                        tools:ignore="VectorDrawableCompat" />

                    <EditText
                        android:id="@+id/ed_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/ic_psw"
                        tools:ignore="VectorDrawableCompat" />

                    <EditText
                        android:id="@+id/ed_psw"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="7dip"
                        android:layout_weight="1"
                        />

                    <FrameLayout
                        android:id="@+id/layout_cnx_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        >

                        <TextView
                            android:id="@+id/btn_connexion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:background="@drawable/customborder"
                            android:visibility="visible"
                            />

                    <ProgressBar
                        android:id="@+id/pg_Progresse"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyle"
                        android:indeterminateTint="@color/redd"
                        android:visibility="gone"
                        />

                        </FrameLayout>

                    </LinearLayout>



                </LinearLayout>
            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/customborder"
                android:visibility="visible"
                />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</FrameLayout>
